# task-manager

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
alembic/versions/: 57498fc39a22_fix_user_email_nullable.py  9621134decb6_initial_migration.py
src/: database.py  dependencies.py  main.py  messages.py  security.py  service.py  settings.py
src/routers/: auth_router.py  tasks_router.py
src/schemas/: auth.py  tasks.py
